# python-image-resizer

./: .gitignore  ImageResizer.spec  Makefile  Readme.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/image_resizer/: __init__.py  config.py  dialogs.py  image_processor.py  main_window.py
tests/: test_config.py  test_image_processor.py
